# Bili_Tools_Danmu

./: .gitattributes  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
scripts/: mock-ws.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: app_config.rs  bilibili.rs  commands.rs  lib.rs  main.rs  models.rs  store.rs  ws_client.rs
src/api/: client.ts
src/core/: messageStore.test.ts  messageStore.ts  types.ts
src/ui/: biliBadges.test.ts  biliBadges.ts  connectionStatus.test.ts  connectionStatus.ts  contextMenu.test.ts  contextMenu.ts  format.test.ts  format.ts  layout.test.ts  layout.ts  panelTransition.test.ts  panelTransition.ts  panelWindow.test.ts  panelWindow.ts  settingsPanel.test.ts  settingsPanel.ts  viewportCapacity.test.ts  viewportCapacity.ts  windowActions.test.ts  windowActions.ts
