[package]
name = "danmu-tools"
version = "0.1.0"
description = "A translucent desktop danmu message viewer."
authors = ["DanmuTools"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "danmu_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
directories = "5"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["time"] }
tokio-tungstenite = "0.26"

