[package]
name = "danmu-tools"
version = "0.1.0"
description = "A translucent desktop danmu message viewer."
authors = ["DanmuTools"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "danmu_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
brotli = "8"
directories = "5"
flate2 = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["macros", "time"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
url = "2"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
